Add valid to dto